# Trace

./: Cargo.toml  FINAL_OUTPUT_SHOWCASE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
Trace/: Cargo.toml  build.rs
Trace/manifests/: trace-schema.json
Trace/src/detector/: kernel.rs  mod.rs  os.rs
Trace/src/output/: json.rs  yaml.rs
Trace/src/sandbox/: mod.rs
Trace/src/tracer/: cpu.rs  syscalls.rs
docs/: architecture.md
examples/: demo_trace.sh
src/: cli.rs  lib.rs  main.rs
src/detector/: kernel.rs  mod.rs
src/output/: json.rs  mod.rs  table.rs
src/sandbox/: drop_priv.rs
src/tracer/: memory.rs  mod.rs  network.rs  process.rs
src/utils/: error.rs  fs.rs  logger.rs  mod.rs
